# Cellular-BroadBand

./: ARCHITECTURE.md  CMakeLists.txt  FILE_TREE.md  README.md
docs/: design_document.md  firmware_stack.md  gpu_strategy.md  hardware_stack.md  modem_strategy.md  overview.md  threat_model.md
include/: event_logger.h  modem_access_restrictions.h
include/modem/ID/: ad_id_rotator.h  imsi_rotator.h  inzi_rotator.h
src/: event_logger.c  main.c
src/commands/: modem_commands.c
src/modem/: lte_modem.c  lte_modem.h
src/modem/ID/: AD_ID  ID.conf  ad_id_rotator.c  imsi_rotator.c  inzi_rotator.c
src/modem/network/: packet_handler.c  packet_handler.h
src/modem/security/: authentication.c  authentication.h  encryption.c  encryption.h
src/utils/: error_handling.c  error_handling.h  logging.c  logging.h
tests/: test_authentication.c  test_encryption.c  test_lte_modem.c  test_packet_handler.c
